--- a/index.html
+++ b/index.html
@@ -181,13 +181,82 @@
                 </div>
             </div>
         </section>
-
+        <section class="section5">
+            <div class="left-container">
+                <img src="./images/img.png" alt="">
+            </div>
+            <div class="right-container">
+                <div><h2>Get the latest updates</h2></div>
+                <div><p>Sign up for our newsletter</p></div>
+                <div class="input">
+                    <input type="text" placeholder="Email">
+                    <button>Sign Up</button>
+                </div>
+                <div class="terms"><p>By signing up to our newsletter you agree to our <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a></p></div>
+            </div>
+        </section>
 
 
     </main>
 
 
-    <footer></footer>
+    <footer>
+
+        <div class="footer-main">
+            <div class="left-footer">
+                <a href="#">
+                    <div class="footer-logo">
+                        <img src="https://img.icons8.com/3d-fluency/94/graduation-cap.png" alt="logo">
+                        <span>EduVista</span>
+                    </div>
+                </a>
+                <div class="footer-desc">
+                    <p>Seamless Learning for Brighter Futures.</p>
+                </div>
+                <div class="footer-social">
+                    <a href="#"><img src="./images/instagram.svg" alt=Instagram"></a>
+                    <a href="#"><img src="./images/twitter.svg" alt="Twitter"></a>
+                    <a href="#"><img src="./images/linkedin-copy.svg" alt="Linkedin"></a>
+                    <a href="#"><img src="./images/github.svg" alt="Github"></a>
+                </div>
+            </div>
+            <div class="right-footer">
+                <div class="list-footer">
+                    <h2>Products</h2>
+                    <a href="#">Overview</a>
+                    <a href="#">Solutions</a>
+                    <a href="#">Pricing</a>
+                    <a href="#">Customers</a>
+                </div>
+                <div class="list-footer">
+                    <h2>Company</h2>
+                    <a href="#">About</a>
+                    <a href="#">Investor <br> Relations</a>
+                    <a href="#">Jobs</a>
+                    <a href="#">Press</a>
+                    <a href="#">Blog</a>
+                </div>
+                <div class="list-footer">
+                    <h2>Support</h2>
+                    <a href="#">Contact</a>
+                    <a href="#">Documentation</a>
+                    <a href="#">Chat</a>
+                    <a href="#">FAQ</a>
+                </div>
+                <div class="list-footer">
+                    <h2>Legal</h2>
+                    <a href="#">Terms of Service</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Cookie Settings</a>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            © 2021 - Present EduVista. All rights reserved.
+        </div>
+
+
+    </footer>
 
 
     
