Update meta Tags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./images/icons8-graduation-cap-96.png" type="image/x-icon">
-    <title>EduVista</title>
+    <meta name="title" content="EduVista | Smart Learning Platform for Modern Students" />
+    <meta name="description" content="EduVista is a modern e-learning platform designed to boost academic performance with interactive lessons, quizzes & real-time progress tracking." />
+    <meta name="keywords" content="EduVista, online learning platform, e-learning, digital classroom, virtual classes, student portal, LMS, interactive education, AI learning, modern teaching tools, free study materials, coding for students, CBSE, ICSE, NCERT, Vercel education site, academic excellence, online tuition, learning analytics, smart education platform" />
+    <meta name="author" content="EduVista Team" />
+    <title>EduVista | Smart Learning Platform for Modern Students</title>
 </head>
 <body>
     <header>
